<resources>
    <string name="app_name">GarbageSortingAPP</string>
    <string name="hint_of_select">输入关键字</string>
    <string name="top_search">热搜</string>
    <string name="history_search">搜索历史：</string>
    <string name="quick_search">快速搜索</string>
    <string name="saveornot">保存</string>
    <string name="you_have_three_choices">you have three choices</string>
    <string name="garbage_sorting_data">查询垃圾分类信息</string>
    <string name="recycle_garbage">查询回收物品信息</string>
    <string name="garbage_sorting">垃圾分类信息</string>
    <string name="look">查看</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="garbage_name_edit">请输入回收垃圾的名字</string>
    <string name="recycleplace">请输入回收地点</string>
    <string name="recycle_time">请输入回收的时间</string>
    <string name="recyclesort">请输入回收垃圾的类别</string>
    <string name="ps">请输入回收垃圾的分类建议</string>
    <string name="save">保存</string>
    <string name="change">更改</string>
    <string name="research">查询</string>
    <string name="back">退出</string>
    <string name="data_style">请选择你要更改的数据类型</string>
    <string name="garbage_name">回收物品的名字</string>
    <string name="garbage_place">物品的回收地点</string>
    <string name="garbage_time">物品的回收时间</string>
    <string name="garbage_style">回收物品的种类</string>
    <string name="garbage_ps">物品的回收建议</string>
    <string name="data_need_to_change">请输入要更新的数据</string>
    <string name="update">更新</string>
    <string name="name_of_garbage">请输入要修改的回收物品的名字</string>
    <string name="delete_garbage_name">请输入你要删除的物品的名字</string>
    <string name="delete2">删除</string>
    <string name="search_by_garbage_name">请输入你要查询的物品名字</string>
    <string name="recycle_time_garbage">请输入物品的回收时间</string>
    <string name="of">或</string>
    <string name="three_methods_to_search">three methods to search</string>
    <string name="garbage_recyclestyle">请输入回收物品的种类</string>
    <string name="search_for_garbage">查询</string>
    <string name="keywords_for_search">请输入关键词进行查询</string>
</resources>