<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/TextVIEW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/you_have_three_choices"
        android:gravity="center"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/recycle_garbage_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recycle_garbage"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/garbage_sorting_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/garbage_sorting_data"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/text_insert_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="查询文本输入历史"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/back6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

</LinearLayout>