<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/data_need_how_to_change"
        android:hint="@string/name_of_garbage"
        android:layout_marginTop="250dp"
        android:gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/data_need_to_change"
        android:hint="@string/data_need_to_change"
        android:layout_marginTop="20dp"
        android:gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/update"
        android:text="@string/update"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

</LinearLayout>